--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,48 @@
 {
+  "name": "CHANGE THIS : Extension boilerplate",
+  "version": "0.0.1",
   "manifest_version": 2,
-  "name": "In Time",
-  "description": "Automate a to do list from your email",
-  "version": "1.0",
-  "icons": { "16": "img/icon16.png",
-    "48": "img/icon48.png",
-    "128": "img/icon128.png" },
-
-  "browser_action": {
-    "default_icon": "img/icon128.png",
-    "default_popup": "index.html",
-    "default_title": "In Time"
+  "description": "This extension was created with the awesome extensionizr.com",
+  "homepage_url": "http://extensionizr.com",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
-  
+  "default_locale": "en",
+  "background": {
+    "page": "src/bg/background.html",
+    "persistent": false
+  },
+  "options_page": "src/options_custom/index.html",
+  "browser_action": {
+    "default_icon": "icons/icon19.png",
+    "default_title": "browser action demo",
+    "default_popup": "src/browser_action/browser_action.html"
+  },
   "permissions": [
-    "activeTab"
+    "clipboardRead",
+    "clipboardWrite",
+    "fileBrowserHandler",
+    "notifications",
+    "tabs"
   ],
   "content_scripts": [
-  {
-    "matches": [
-      "*://*/*"
+    {
+      "matches": [
+        "https://www.google.com/*"
       ],
-    "css": [
-      "styles.css"
+      "css": [
+        "src/inject/inject.css"
       ]
-  }
+    },
+    {
+      "matches": [
+        "https://www.google.com/*"
+      ],
+      "js": [
+        "src/inject/inject.js"
+      ]
+    }
   ]
 }
