removing all in-line and internal js from html

--- a/manifest.json
+++ b/manifest.json
@@ -41,9 +41,7 @@
       "matches": [
         "http://*/*"
       ],
-      "js": [
-        "src/inject/inject.js",
-      ],
+      "js": ["src/inject/inject.js"],
       "run_at": "document_start",
       "all_frames": true
     }
